# matchit-api

./: .dockerignore  .gitignore  AUTHENTICATION_USAGE.md  Dockerfile  README.md  database.py  dependencies.py  helper.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: google-cloudrun-docker.yml
crud/: area.py  auth.py  boulder.py  country.py  crag.py  deduplicate.py  recommendation.py  region.py  search.py  stats.py  user.py
migration/: 20260117000001_create_account_table copy.sql  20260117000002_update_main_boulder_id_to_fk.sql
models/: account.py  area.py  boulder.py  country.py
routers/: area.py  auth.py  boulder.py  country.py  crag.py  deduplicate.py  recommendation.py  region.py  search.py  stats.py  user.py
schemas/: area.py  ascent.py  auth.py  boulder.py  country.py  crag.py  deduplicate.py  general.py  grade.py  recommendation.py  region.py  search.py  style.py  user.py
