[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["cmareau-git <charles_mareau@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flake8 = "^7.2.0"
fastapi = {extras = ["standard"], version = "^0.115.12"}
matplotlib = "^3.10.1"
numpy = "^2.3.3"
scipy = "^1.16.2"
psutil = "^7.1.0"
sqlalchemy = "^2.0.44"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
